Added better prevention to accidently overwrite admin password

--- a/pubsubplus/templates/secret.yaml
+++ b/pubsubplus/templates/secret.yaml
@@ -1,7 +1,14 @@
+{{- $secretBase := include "solace.fullname" . }}
+{{- $secretName := printf "%s-%s" $secretBase "secrets" }}
+{{- $adminPasswordValue := (randAlpha 10) | b64enc | quote }}
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName) }}
+{{- if $secret }}
+{{- $adminPasswordValue = index $secret.data "username_admin_password" }}
+{{- end -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "solace.fullname" . }}-secrets
+  name: {{ $secretName }}
   labels:
     app.kubernetes.io/name: {{ template "solace.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -12,5 +19,5 @@ data:
 {{ if .Values.solace.usernameAdminPassword }}
   username_admin_password:  {{ .Values.solace.usernameAdminPassword | b64enc | quote }}
 {{ else }}
-  username_admin_password: {{ randAlphaNum 10 | b64enc | quote }}
+  username_admin_password: {{ $adminPasswordValue}}
 {{ end }}
