--- a/pubsubplus/values.openshift.yaml
+++ b/pubsubplus/values.openshift.yaml
@@ -2,10 +2,10 @@
 
 # This will reference a RedHat certified image when available
 # image:
-#   # Default repository is the public Solace DockerHub repo
-#   repository: solace/solace-pubsub-standard
-#   # Recommending to use a specific version tag for production
-#   tag: latest
+  # Default repository is the public Solace DockerHub repo
+  repository: registry.connect.redhat.com/solace/pubsubplus-standard
+  # Recommending to use a specific version tag for production
+  tag: latest
 
 securityContext:
   # securityContext.enabled=true sets the pod security context
