--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -45,42 +45,42 @@ spec:
           requests:
 {{- if eq .Values.solace.size "dev" }}
             cpu: "1"
-            memory: 3.4Gi
+            memory: 3410Mi
 {{- else if eq .Values.solace.size "prod100" }}
             cpu: "2"
-            memory: 3.4Gi
+            memory: 4025Mi
 {{- else if eq .Values.solace.size "prod1k" }}
             cpu: "2"
-            memory: 6.5Gi
+            memory: 6515Mi
 {{- else if eq .Values.solace.size "prod10k" }}
             cpu: "4"
-            memory: 13.9Gi
+            memory: 12435Mi
 {{- else if eq .Values.solace.size "prod100k" }}
             cpu: "8"
-            memory: 30.3Gi
+            memory: 30925Mi
 {{- else if eq .Values.solace.size "prod200k" }}
             cpu: "12"
-            memory: 53.5Gi
+            memory: 52581Mi
 {{- end }}
           limits:
 {{- if eq .Values.solace.size "dev" }}
             cpu: "2"
-            memory: 3.4Gi
+            memory: 3410Mi
 {{- else if eq .Values.solace.size "prod100" }}
             cpu: "2"
-            memory: 3.4Gi
+            memory: 4025Mi
 {{- else if eq .Values.solace.size "prod1k" }}
             cpu: "2"
-            memory: 6.5Gi
+            memory: 6515Mi
 {{- else if eq .Values.solace.size "prod10k" }}
             cpu: "4"
-            memory: 13.9Gi
+            memory: 12435Mi
 {{- else if eq .Values.solace.size "prod100k" }}
             cpu: "8"
-            memory: 30.3Gi
+            memory: 30925Mi
 {{- else if eq .Values.solace.size "prod200k" }}
             cpu: "12"
-            memory: 53.5Gi
+            memory: 52581Mi
 {{- end }}
         livenessProbe:
           tcpSocket:
@@ -113,25 +113,42 @@ spec:
           value: {{ printf "%s/%s" ":/usr/share/zoneinfo" (default "UTC" .Values.solace.timezone) }}
         - name: UMASK
           value: "0022"
+{{- if .Values.solace.extraEnvVars }}
+      {{- range $item := .Values.solace.extraEnvVars }}
+        - name: {{ $item.name }}
+          value: {{ $item.value | quote }}
+      {{- end }}
+{{- end }}
+{{- if or .Values.solace.extraEnvVarsCM .Values.solace.extraEnvVarsSecret }}
+        envFrom:
+          {{- if .Values.solace.extraEnvVarsCM }}
+          - configMapRef:
+              name: {{ tpl .Values.solace.extraEnvVarsCM . | quote }}
+          {{- end }}
+          {{- if .Values.solace.extraEnvVarsSecret }}
+          - secretRef:
+              name: {{ tpl .Values.solace.extraEnvVarsSecret . | quote }}
+          {{- end }}
+{{- end }}
         command:
-         - bash
-         - "-ec"
-         - |
-           source /mnt/disks/solace/init.sh
-           # not using postinstall hooks because of order dependencies
-           # launch config check - readiness check script will be launched by readinessProbe
-           nohup /mnt/disks/solace/startup-broker.sh &
-           /usr/sbin/boot.sh
+          - bash
+          - "-ec"
+          - |
+            source /mnt/disks/solace/init.sh
+            # not using postinstall hooks because of order dependencies
+            # launch config check - readiness check script will be launched by readinessProbe
+            nohup /mnt/disks/solace/startup-broker.sh &
+            /usr/sbin/boot.sh
         lifecycle:
           preStop:
             exec:
               command:
-               - bash
-               - "-ec"
-               - |
-                 while ! pgrep solacedaemon ; do sleep 1; done
-                 killall solacedaemon; 
-                 while [ ! -d /usr/sw/var/db.upgrade ]; do sleep 1; done;
+                - bash
+                - "-ec"
+                - |
+                  while ! pgrep solacedaemon ; do sleep 1; done
+                  killall solacedaemon; 
+                  while [ ! -d /usr/sw/var/db.upgrade ]; do sleep 1; done;
         volumeMounts:
         - name: podinfo
           mountPath: /etc/podinfo        
