--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -12,24 +12,24 @@ solace:
   #  true will create an HA deployment with Primary, Backup and Monitor nodes.
   redundancy: false
 
-  # solace.systemScaling provides exact specification of the event broker scaling parameters
+  # solace.systemScaling provides exact fine-grained specification of the event broker scaling parameters
   #   and the assigned CPU / memory resources to the Pod
-  # if provided, these settings OVERRIDE solace.size
+  # if provided, these settings will OVERRIDE solace.size
   # if provided, all parameters must be set
   # For scaling documentation look for "system scaling" at  docs.solace.com
-  # Use the online calculator "Container (messaging)" to determine CPU and Memory resource requirements
+  # Use the online calculator for "Container (messaging)" to determine CPU, Memory and Storage requirements
   # https://docs.solace.com/Assistance-Tools/Resource-Calculator/pubsubplus-resource-calculator.html
-  systemScaling:
-    # maxConnections: max supported number of client connections
-    maxConnections: 100
-    # maxQueueMessages: number of queue messages, in millions of messages
-    maxQueueMessages: 100
-    # maxSpoolUsage: max Spool Usage, in MB. Also ensure adequate storage.size parameter, use the calculator
-    maxSpoolUsage: 1500
-    # cpu: CPUs in cores
-    cpu: 2
-    # memory: host Virtual Memory, in MiB
-    memory: 3410Mi
+  # systemScaling:
+  #   # maxConnections: max supported number of client connections
+  #   maxConnections: 100
+  #   # maxQueueMessages: number of queue messages, in millions of messages
+  #   maxQueueMessages: 100
+  #   # maxSpoolUsage: max Spool Usage, in MB. Also ensure adequate storage.size parameter, use the calculator
+  #   maxSpoolUsage: 1500
+  #   # cpu: CPUs in cores
+  #   cpu: 2
+  #   # memory: host Virtual Memory, in MiB
+  #   memory: 3410Mi
 
   # solace.size defines deployment scaling tier with max # of connections, see README for valid options
   #  dev uses minimum resources but performance is not guaranteed; use prod for production-ready
