--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -23,6 +23,12 @@ spec:
       labels:
         app.kubernetes.io/name: {{ template "solace.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+{{- if .Values.solace.podModifierEnabled }}
+      annotations:
+        pod-modifier.solace.com/modify: "true"
+        pod-modifier.solace.com/modify.podDefinition: |
+          {"Pods":[{"metadata":{"name":"{{ template "solace.fullname" . }}-2"},"spec":{"containers": [{"name": "pubsubplus","resources": {"requests": {"cpu": "1","memory": "1965Mi"},"limits": {"cpu": "1","memory": "1965Mi"} }} ] } } ]}
+{{- end}}
     spec:
 {{- if .Values.image.pullSecretName }}
       imagePullSecrets:
@@ -38,12 +44,15 @@ spec:
       serviceAccountName: {{ template "solace.serviceAccountName" . }}
       terminationGracePeriodSeconds: 1200
       containers:
-      - name: {{ .Chart.Name }}
+      - name: pubsubplus
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
         resources:
           requests:
-{{- if eq .Values.solace.size "dev" }}
+{{- if .Values.solace.systemScaling }}
+            cpu: {{ required "A valid cpu parameter required!" .Values.solace.systemScaling.cpu | quote }}
+            memory: {{ required "A valid memory parameter required!" .Values.solace.systemScaling.memory }}
+{{- else if eq .Values.solace.size "dev" }}
             cpu: "1"
             memory: 3410Mi
 {{- else if eq .Values.solace.size "prod100" }}
@@ -61,9 +70,14 @@ spec:
 {{- else if eq .Values.solace.size "prod200k" }}
             cpu: "12"
             memory: 52581Mi
+{{- else }}
+          {{- fail "Invalid solace.size" }}
 {{- end }}
           limits:
-{{- if eq .Values.solace.size "dev" }}
+{{- if .Values.solace.systemScaling }}
+            cpu: {{ .Values.solace.systemScaling.cpu | quote }}
+            memory: {{ .Values.solace.systemScaling.memory }}
+{{- else if eq .Values.solace.size "dev" }}
             cpu: "2"
             memory: 3410Mi
 {{- else if eq .Values.solace.size "prod100" }}
@@ -149,6 +163,11 @@ spec:
                   while ! pgrep solacedaemon ; do sleep 1; done
                   killall solacedaemon; 
                   while [ ! -d /usr/sw/var/db.upgrade ]; do sleep 1; done;
+        ports:
+          {{- range $item := .Values.service.ports }}
+          - containerPort: {{ $item.containerPort }}
+            protocol: {{ $item.protocol }}
+          {{- end}}
         volumeMounts:
         - name: podinfo
           mountPath: /etc/podinfo        
@@ -164,6 +183,17 @@ spec:
 {{- end }}
         - name: dshm
           mountPath: /dev/shm
+{{- if and (.Values.storage) (.Values.storage.useStorageGroup) }}
+        # use single mount point storage-group
+        - name: data
+          mountPath: /var/lib/solace
+        {{- if ( .Values.storage.slow) }}
+        # mount ephemeral when using slow storage
+        - name: soft-adb-ephemeral
+          mountPath: /var/lib/solace/spool-cache
+        {{- end }}
+{{- else }}
+        # use legacy multiple storage elements
         - name: data
           mountPath: /usr/sw/jail
           subPath: jail
@@ -179,20 +209,16 @@ spec:
         - name: data
           mountPath: /var/lib/solace/diags
           subPath: diags
-{{- if (not .Values.storage.slow) }}
-        # only mount when not using slow storage
+        {{- if (not .Values.storage.slow) }}
         - name: data
           mountPath: /usr/sw/internalSpool/softAdb
           subPath: softAdb
-{{- else }}
+        {{- else }}
+        # mount ephemeral when using slow storage
         - name: soft-adb-ephemeral
           mountPath: /usr/sw/internalSpool/softAdb
+        {{- end }}
 {{- end }}
-        ports:
-        {{- range $item := .Values.service.ports }}
-        - containerPort: {{ $item.containerPort }}
-          protocol: {{ $item.protocol }}
-        {{- end}}
       volumes:
         - name: podinfo
           downwardAPI:
@@ -230,7 +256,6 @@ spec:
 {{ tpl . $ | indent 10 }}
           {{- end }}
 {{- else }}
-
   # This is the default way to acquire volume for the data mount
   volumeClaimTemplates:
   - metadata:
