--- a/pubsubplus/templates/solaceConfigMap.yaml
+++ b/pubsubplus/templates/solaceConfigMap.yaml
@@ -273,7 +273,9 @@ data:
     #!/bin/bash
     APP=`basename "$0"`
     LOG_FILE=/usr/sw/var/k8s_readiness_check.log # STDOUT/STDERR goes to k8s event logs but gets cleaned out eventually. This will also persist it.
-    tail -n 1000 ${LOG_FILE} > ${LOG_FILE}.tmp; mv -f ${LOG_FILE}.tmp ${LOG_FILE} || :  # Limit logs size
+    if [ -f ${LOG_FILE} ] ; then
+        tail -n 1000 ${LOG_FILE} > ${LOG_FILE}.tmp; mv -f ${LOG_FILE}.tmp ${LOG_FILE} || :  # Limit logs size
+    fi
     exec > >(tee -a ${LOG_FILE}) 2>&1 # Setup logging
     FINAL_ACTIVITY_LOGGED_TRACKING_FILE=/tmp/final_activity_state_logged
 
@@ -326,6 +328,7 @@ data:
     if [ -f ${LASTVERSION_FILE} ] && [[ $(cat ${LASTVERSION_FILE}) != $(get_label "controller-revision-hash") ]] ; then
       echo "`date` INFO: ${APP}-Upgrade detected, running additional checks..."
       # Check redundancy
+      echo "`date` INFO: ${APP}-Running checks. Redundancy state check started..."
       results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
               -q "<rpc><show><redundancy/></show></rpc>" \
               -v "/rpc-reply/rpc/show/redundancy/redundancy-status"`
@@ -335,6 +338,7 @@ data:
         rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
       fi
       # Additionally check config-sync status for non-monitoring nodes
+      echo "`date` INFO: ${APP}-Running checks. Config-sync state check started..."
       if [ "${node_ordinal}" != "2" ]; then
         results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
                 -q "<rpc><show><config-sync></config-sync></show></rpc>" \
@@ -349,6 +353,7 @@ data:
     # Record current version in LASTVERSION_FILE
     echo $(get_label "controller-revision-hash") > ${LASTVERSION_FILE}
     # For monitor node just check for 3 online nodes in group; active label will never be set
+    echo "`date` INFO: ${APP}-Running checks. Server status check started..."
     if [ "${node_ordinal}" = "2" ]; then
       role_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
               -q "<rpc><show><redundancy><group/></redundancy></show></rpc>" \
@@ -363,6 +368,8 @@ data:
         if [ ! -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE} ]; then
           echo "`date` INFO: ${APP}-All nodes online, monitor node is redundancy ready"
           touch ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}
+          echo "`date` INFO: ${APP}-Server status check complete for this broker node"
+          exit 1
         fi
         exit 0
       else
@@ -377,6 +384,9 @@ data:
         if [ ! -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE} ]; then
           echo "`date` INFO: ${APP}-HA Event Broker health check reported 200, message spool is up"
           touch ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}
+          echo "`date` INFO: ${APP}-Server status check complete for this broker node"
+          echo "`date` INFO: ${APP}-Changing pod label to active"
+          exit 1
         fi
         set_label "active" "true"
         exit 0
@@ -389,6 +399,7 @@ data:
       *)
         echo "`date` WARN: ${APP}-HA Event Broker health check reported unexpected ${health_result}"
         set_label "active" "false"
+        echo "`date` INFO: ${APP}-Changing pod label to inactive"
         rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
     esac
     # At this point analyzing readiness after health check returned 503 - checking if Event Broker is Standby
@@ -410,6 +421,8 @@ data:
         if [ ! -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE} ]; then
           echo "`date` INFO: ${APP}-Redundancy is up and node is mate Active"
           touch ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}
+          echo "`date` INFO: ${APP}-Server status check complete for this broker node"
+          exit 1
         fi
         exit 0
         ;;
@@ -426,6 +439,9 @@ data:
         if [ ! -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE} ]; then
           echo "`date` INFO: ${APP}-nonHA Event Broker health check reported 200, message spool is up"
           touch ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}
+          echo "`date` INFO: ${APP}-Server status check complete for this broker node"
+          echo "`date` INFO: ${APP}-Changing pod label to active"
+          exit 1
         fi
         set_label "active" "true"
         exit 0
@@ -433,12 +449,14 @@ data:
       "503")
         if [[ $(get_label "active") = "true" ]]; then echo "`date` INFO: ${APP}-nonHA Event Broker health check reported 503, message spool is down"; fi
         set_label "active" "false"
+        echo "`date` INFO: ${APP}-Changing pod label to inactive"
         # Fail readiness check
         rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
         ;;
       *)
         echo "`date` WARN: ${APP}-nonHA Event Broker health check reported ${health_result}"
         set_label "active" "false"
+        echo "`date` INFO: ${APP}-Changing pod label to inactive"
         # Fail readiness check
         rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
     esac
